fix: project card name not showing

--- a/src/scss/components/workPage/_project.scss
+++ b/src/scss/components/workPage/_project.scss
@@ -69,8 +69,6 @@
 }
 
 .workpage-project-card-header-name-container {
-  @include flex(row, center, center);
-
   font-size: 1.2rem;
   font-weight: bold;
   color: $text-green;
